--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
         
         <div class="album-grid">
             <div class="album" data-album="bfiafl">
-                <img src="images\images.png"><alt="Being Funny in a Foreign Language">
+                <img src="images/images.png" alt="Being Funny in a Foreign Language Album Cover">
                 <h3>Being Funny in a Foreign Language</h3>
                 <p>The 1975 (2022)</p>
             </div>
             <div class="album" data-album="noacf">
-                <img src="images\noacf.png"><alt="Notes on a Conditional Form">
+                <img src="images/noacf.png" alt="Notes on a Conditional Form Album Cover">
                 <h3>Notes on a Conditional Form</h3>
                 <p>The 1975 (2020)</p>
             </div>
             <div class="album" data-album="abiior">
-                <img src="images\abiior.png"><alt="A Brief Inquiry into Online Relationships">
+                <img src="images/abiior.png" alt="A Brief Inquiry into Online Relationships Album Cover">
                 <h3>A Brief Inquiry into Online Relationships</h3>
                 <p>The 1975 (2018)</p>
             </div>
