--- a/index.html
+++ b/index.html
@@ -68,14 +68,17 @@
         <div class="album-grid">
             <div class="album" data-album="bfiafl">
                 <h3>Being Funny in a Foreign Language</h3>
+                <img src="abiior.png" alt="A Brief Inquiry into Online Relationships Album Cover">
                 <p>The 1975 (2022)</p>
             </div>
             <div class="album" data-album="noacf">
                 <h3>Notes on a Conditional Form</h3>
+                <img src="noacf.png" alt="Notes on a Conditional Form Album Cover">
                 <p>The 1975 (2020)</p>
             </div>
             <div class="album" data-album="abiior">
                 <h3>A Brief Inquiry into Online Relationships</h3>
+                <img src="abiior.png" alt="A Brief Inquiry into Online Relationships Album Cover">
                 <p>The 1975 (2018)</p>
             </div>
         </div>
