--- a/index.html
+++ b/index.html
@@ -67,18 +67,18 @@
         
         <div class="album-grid">
             <div class="album" data-album="bfiafl">
+                <img src="C:\Users\carav\Downloads\images\images.png" alt="Being Funny in a Foreign Language">
                 <h3>Being Funny in a Foreign Language</h3>
-                <img src="abiior.png" alt="A Brief Inquiry into Online Relationships Album Cover">
                 <p>The 1975 (2022)</p>
             </div>
             <div class="album" data-album="noacf">
+                <img src="C:\Users\carav\Downloads\images\noacf.png" alt="Notes on a Conditional Form">
                 <h3>Notes on a Conditional Form</h3>
-                <img src="noacf.png" alt="Notes on a Conditional Form Album Cover">
                 <p>The 1975 (2020)</p>
             </div>
             <div class="album" data-album="abiior">
+                <img src="C:\Users\carav\Downloads\images\abiior.png" alt="A Brief Inquiry into Online Relationships">
                 <h3>A Brief Inquiry into Online Relationships</h3>
-                <img src="abiior.png" alt="A Brief Inquiry into Online Relationships Album Cover">
                 <p>The 1975 (2018)</p>
             </div>
         </div>
